[create] new page

--- a/wwwroot/css/SiteStyle.css
+++ b/wwwroot/css/SiteStyle.css
@@ -17,3 +17,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+.NAV-MENU-ACTIVE {
+    background-color: red !important;
+}
