--- a/wwwroot/css/PageLoad.css
+++ b/wwwroot/css/PageLoad.css
@@ -11,11 +11,11 @@ body {
     width: 100%;
     height: 100%;
     z-index: 9999;
-    background-color: #babdfc;
+    background-color: #ABDFF1;
 }
 
 .bar {
-    background-color: #8381f7;
+    background-color: #0C4A60;
     width: 0%;
     height: 5px;
     border-radius: 3px;
